--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
                 </div>
                 <div class="stats">
                     <div class="stat">
-                        <span class="num">12+</span>
+                        <span class="num">10</span>
                         <span class="label">років на ринку</span>
                     </div>
                     <div class="stat">
-                        <span class="num">8 500+</span>
+                        <span class="num">1 000+</span>
                         <span class="label">задоволених пацієнтів</span>
                     </div>
                     <div class="stat">
-                        <span class="num">10</span>
+                        <span class="num">4</span>
                         <span class="label">висококласних лікарів</span>
                     </div>
                 </div>
@@ -205,7 +205,6 @@
         </div>
     </div>
 
-
     <footer class="site-footer">
         <div class="container footer-grid">
             <div class="footer-col">
@@ -246,56 +245,6 @@
         toggle.classList.toggle('open');
     });
     </script>
-
-    <script>
-    const modal = document.getElementById('appointmentModal');
-    const openBtns = document.querySelectorAll('.zapisbtn'); // всі кнопки
-    const closeBtn = document.querySelector('.modal .close');
-    const form = document.getElementById('appointmentForm');
-    const response = document.getElementById('formResponse');
-
-    // відкриття модалки по кліку на будь-яку кнопку
-    openBtns.forEach(btn => {
-        btn.addEventListener('click', (e) => {
-            e.preventDefault();
-            modal.style.display = 'block';
-        });
-    });
-
-    // закриття модалки
-    closeBtn.addEventListener('click', () => {
-        modal.style.display = 'none';
-    });
-
-    // закриття по кліку поза модалкою
-    window.addEventListener('click', (e) => {
-        if(e.target === modal) {
-            modal.style.display = 'none';
-        }
-    });
-
-    // обробка форми
-    form.addEventListener('submit', (e) => {
-        e.preventDefault();
-        const name = form.name.value.trim();
-        const phone = form.phone.value.trim();
-        const message = form.message.value.trim();
-
-        if(!name || !phone) {
-            response.textContent = 'Будь ласка, заповніть обов’язкові поля.';
-            response.style.color = 'red';
-            return;
-        }
-
-        response.textContent = 'Заявка надіслана! Дякуємо.';
-        response.style.color = 'green';
-        form.reset();
-        setTimeout(() => { modal.style.display = 'none'; response.textContent = ''; }, 2500);
-
-        // ТУТ можна додати AJAX для відправки на сервер/Telegram
-    });
-    </script>
-
-
+    <script src="js/zapis.js"></script>
 </body>
 </html>
