--- a/team.html
+++ b/team.html
@@ -57,7 +57,6 @@
             <h4>Галина Собакар Iванiвна</h4>
             <p class="position">Імплантолог</p>
         </article>
-        <!-- можна додати більше лікарів -->
     </section>
 
     <section class="cta-book">
@@ -66,7 +65,6 @@
 
 </main>
 
-<!-- Модальне вікно запису -->
 <div id="appointmentModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
@@ -118,54 +116,6 @@
         </div>
     </div>
 </footer>
-
-<script>
-const toggle = document.getElementById('mobileToggle');
-const nav = document.getElementById('mainNav');
-toggle.addEventListener('click', () => {
-    nav.classList.toggle('open');
-    toggle.classList.toggle('open');
-});
-</script>
-<script>
-const modal = document.getElementById('appointmentModal');
-const openBtns = document.querySelectorAll('.zapisbtn');
-const closeBtn = document.querySelector('.modal .close');
-const form = document.getElementById('appointmentForm');
-const response = document.getElementById('formResponse');
-
-openBtns.forEach(btn => {
-    btn.addEventListener('click', (e) => {
-        e.preventDefault();
-        modal.style.display = 'block';
-    });
-});
-
-closeBtn.addEventListener('click', () => {
-    modal.style.display = 'none';
-});
-
-window.addEventListener('click', (e) => {
-    if(e.target === modal) modal.style.display = 'none';
-});
-
-form.addEventListener('submit', (e) => {
-    e.preventDefault();
-    const name = form.name.value.trim();
-    const phone = form.phone.value.trim();
-    const message = form.message.value.trim();
-
-    if(!name || !phone) {
-        response.textContent = 'Будь ласка, заповніть обов’язкові поля.';
-        response.style.color = 'red';
-        return;
-    }
-
-    response.textContent = 'Заявка надіслана! Дякуємо.';
-    response.style.color = 'green';
-    form.reset();
-    setTimeout(() => { modal.style.display = 'none'; response.textContent = ''; }, 2500);
-});
-</script>
+    <script src="js/zapis.js"></script>
 </body>
 </html>
